# Cpp-Shooty-McShootface

./: .gitignore  CMakeLists.txt  README.md  build-and-run-bdd-tests.sh  build.sh  imgui.ini  run-bdd-tests.sh  run.sh
Media/Shaders/: clouds_distortion.frag  flash.frag  heat_distortion.frag  white_flash.frag
Media/data/: settings.csv
bdd/: CMakeLists.txt
bdd/features/: clickstartbutton.feature  example.feature  moveplayer.feature  rungame.feature
bdd/features/step_definitions/: GameContext.h  GameRuntimeSetup.h  click_start_button.cpp  cucumber-cpp.wire  example_step.cpp  move_player.cpp  run_game_step.cpp  rungame.feature
bdd/features/step_definitions/util/: GameRuntimeSetup.cpp
cmake/: BDDTestingConfig.cmake  Dependencies.cmake  EditorMode.cmake  MediaCopy.cmake  PlatformMacOS.cmake  PlatformWindows.cmake  UnitTests.cmake
data/: Cpp_Playground - Sheet1.csv
src/: Aircraft.cpp  Aircraft.h  Bullet.cpp  Bullet.h  BulletController.cpp  BulletController.h  Category.h  Command.cpp  Command.h  CommandQueue.h  Controls.cpp  Controls.h  EnemyAircraftController.cpp  EnemyAircraftController.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameModeFactory.h  IGameMode.h  Logger.cpp  Logger.h  Player.cpp  Player.h  PlayerControls.cpp  PlayerControls.h  Projectile.cpp  Projectile.h  ProjectileCollisionController.cpp  ProjectileCollisionController.h  ProjectileController.cpp  ProjectileController.h  Random.h  ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h  SceneNode.cpp  SceneNode.h  SpriteEntity.cpp  SpriteEntity.h  (+5 more)
src/Audio/: SoundEffects.cpp  SoundEffects.h  SoundPool.cpp  SoundPool.h
src/Command/: Command.h  CommandQueue.cpp  CommandQueue.h
src/Controllers/: BackgroundController.cpp  BackgroundController.h  CloudsController.cpp  CloudsController.h  EnemyAircraftController.cpp  EnemyAircraftController.h  ExplosionController.cpp  ExplosionController.h  GuiController.cpp  GuiController.h  PlayerAircraftController.cpp  PlayerAircraftController.h  ProjectileCollisionController.cpp  ProjectileCollisionController.h  ProjectileController.cpp  ProjectileController.h  ScoreController.cpp  ScoreController.h
src/Data/: AircraftData.h  BackgroundData.h  CloudData.h  GameSettings.h  MediaFiles.h  ProjectileFiringData.h
src/Editor/: EditorGameMode.cpp  EditorGameMode.h  Graph.h  Performance.cpp  Performance.h  Settings.cpp
src/Entity/: AircraftEntity.cpp  AircraftEntity.h  BackgroundEntity.cpp  BackgroundEntity.h  CloudEntity.cpp  CloudEntity.h  EntityObject.cpp  EntityObject.h  EntitySystem.cpp  EntitySystem.h  EntitySystem.inl  ExplosionEntity.h  ObjectPool.h  ObjectPool.inl  ProjectileEntity.cpp  ProjectileEntity.h  SpriteEntity.cpp  SpriteEntity.h  StarEntity.cpp  StarEntity.h
src/Game/: Game.cpp  Game.h  IGameMode.h  PlayerControls.cpp  PlayerControls.h  StandardGameMode.h
src/Game/Audio/: SoundEffects.cpp  SoundEffects.h  SoundPool.cpp  SoundPool.h  SoundSettings.h
src/Game/Data/: AircraftData.h  AnimationData.h  CloudData.h  MediaFiles.h  PlayerData.h
src/Game/Entity/: AircraftEntity.cpp  AircraftEntity.h  BackgroundEntity.cpp  BackgroundEntity.h  CloudEntity.cpp  CloudEntity.h  EntityObject.h  EntitySystem.h  EntitySystem.inl  EntitySystems.h  ExplosionEntity.cpp  ExplosionEntity.h  ProjectileEntity.h  StarEntity.cpp  StarEntity.h
src/Game/Gui/: Button.cpp  Button.h  Label.cpp  Label.h
src/Game/Initializers/: BackgroundInitializer.cpp  BackgroundInitializer.h  CloudsInitializer.cpp  CloudsInitializer.h  EnemyAircraftInitializer.cpp  ExplosionInitializer.cpp  ExplosionInitializer.h  GuiInitializer.cpp  GuiInitializer.h  PlayerAircraftInitializer.cpp  PlayerAircraftInitializer.h  StarInitializer.cpp  StarInitializer.h
src/Game/ObjectPool/: ObjectPool.h  ObjectPool.inl
src/Game/Resource/: ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h
src/Game/Settings/: CsvSerializer.h  CsvSerializer.inl  CsvSerializerImpl.h  CvsSerializer.h  CvsSerializer.inl  GameSettings.cpp  GameSettings.h  GameSettingsData.h  ICsvSerializer.h
src/Game/State/: CursorState.h  Settings.cpp  Settings.h  StateHandler.cpp  StateHandler.h  TransitionScreen.cpp  TransitionScreen.h  World.cpp  World.h
src/Game/System/: BackgroundMovementSystem.h  CloudMovementSystem.cpp  CloudMovementSystem.h  (+12 more)
src/Gui/: Button.cpp  Button.h  Label.cpp  Label.h
src/Initializers/: BackgroundInitializer.cpp  CloudsInitializer.cpp  EnemyAircraftInitializer.h  ExplosionInitializer.cpp  GuiInitializer.cpp  PlayerAircraftInitializer.cpp  PlayerAircraftInitializer.h  ProjectileInitializer.cpp  ProjectileInitializer.h  StarInitializer.cpp  StarInitializer.h
src/Math/: RandomFloatGenerator.h
src/ObjectPool/: ObjectPool.h  ObjectPool.inl
src/Profiler/: TracyOperators.h
src/Resource/: ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h
src/Settings/: CvsSerializer.h  GameSettings.cpp  GameSettings.h  GameSettingsData.h
src/State/: CursorState.h  DebugSettings.cpp  DebugSettings.h  GameOver.cpp  GameOver.h  GameRenderTextureState.h  Performance.cpp  Performance.h  Settings.cpp  Settings.h  StateHandler.cpp  StateHandler.h  TransitionScreen.cpp  TransitionScreen.h  World.cpp  World.h
src/System/: BackgroundMovementSystem.cpp  BackgroundMovementSystem.h  CloudMovementSystem.cpp  CloudMovementSystem.h  EnemyAircraftMovementSystem.cpp  EnemyAircraftMovementSystem.h  ExplosionAnimationSystem.cpp  ExplosionAnimationSystem.h  PlayerAircraftMovementSystem.cpp  PlayerAircraftMovementSystem.h  PlayerKilledSystem.cpp  PlayerKilledSystem.h  ProjectileCollisionSystem.cpp  ProjectileCollisionSystem.h  ProjectileMovementSystem.cpp  ProjectileSpawnSystem.cpp  ProjectileSpawnSystem.h  RemoveOffScreenEnemiesSystem.cpp  RemoveOffScreenEnemiesSystem.h  RemoveOffScreenProjectilesSystem.cpp  RemoveOffScreenProjectilesSystem.h  SpawnEnemyAircraftSystem.cpp  SpawnEnemyAircraftSystem.h  StarMovementSystem.cpp  StarMovementSystem.h
test_src/: MockCsvSerializer.h  test.csv  test_CircularBuffer.cpp  test_CsvSerializer.cpp  test_CvsSerializer.cpp  test_GameSettings.cpp  test_ProjectileFiringData.cpp
(+5 files in other folders)
